--- a/style.css
+++ b/style.css
@@ -224,7 +224,18 @@ body {
   align-items: center;
   padding: 0;
   margin: 0;
-  margin-left: -2px;
+}
+
+@media (min-width: 768px) {
+  .nav__logo {
+    margin-left: -30px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .nav__logo {
+    margin-left: -40px;
+  }
 }
 
 .nav__logo:hover {
