--- a/style.css
+++ b/style.css
@@ -205,12 +205,16 @@ body {
 @media (min-width: 768px) {
   .nav__container {
     padding: 0 var(--space-2xl);
+    padding-left: 0;
+    margin-left: var(--space-2xl);
   }
 }
 
 @media (min-width: 1200px) {
   .nav__container {
     padding: 0 var(--space-3xl);
+    padding-left: 0;
+    margin-left: var(--space-3xl);
   }
 }
 
@@ -224,18 +228,6 @@ body {
   align-items: center;
   padding: 0;
   margin: 0;
-}
-
-@media (min-width: 768px) {
-  .nav__logo {
-    margin-left: -30px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .nav__logo {
-    margin-left: -40px;
-  }
 }
 
 .nav__logo:hover {
